[package]
edition = "2021"
name = "tvm_common"
rust-version = "1.75"
version = "1.0.0"

[dependencies]
external-ip = "4.2.0"
failure = "0.1.8"
log = "0.4"
log4rs = { version = "1.2.0" }
serde_json = "1.0.111"
tokio = { version = "1.35.1", default-features = false }

tvm_types = { git = "https://github.com/tvmlabs/tvm-types", default-features = false, version = "3.0.0" }
