[package]
edition = "2021"
name = "tvm_common"
rust-version = "1.75"
version = "1.0.1"

[dependencies]
external-ip = "4.2.0"
log = "0.4.20"
log4rs = { version = "1.2.0" }
serde_json = "1.0.113"
tokio = { version = "1.35.1", default-features = false }

tvm_types = { git = "https://github.com/tvmlabs/tvm-types", default-features = false, version = "3.0.1", tag = "3.0.1" }
